<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_24_cart"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_reviews"
        android:icon="@drawable/ic_24_review"
        android:title="@string/title_reviews" />

    <item
        android:id="@+id/navigation_chat"
        android:icon="@drawable/ic_chat"
        android:title="@string/title_chat" />

    <item
        android:id="@+id/navigation_feeds"
        android:icon="@drawable/ic_24_gallery"
        android:title="@string/title_feeds" />


    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_24_profile"
        android:title="@string/title_profile" />


</menu>
